# cpp-template

./: .clang-format  .clang-tidy  .gitignore  .neocmakelint.toml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/: Find_ASSERTIONS.cmake  Find_BENCHMARK.cmake  Find_IMGUI_SFML.cmake  Find_SDL3.cmake  Find_TRACY.cmake  Run_ClangFormat.cmake  run_clang_format.sh
lib/: CMakeLists.txt
lib/Somelib/: CMakeLists.txt  Somelib.cpp  Somelib.hpp
lib/Somelib/tests/: CMakeLists.txt  Somelib_test.cpp
lib/logger/: CMakeLists.txt  logger.cpp
lib/utils/: CMakeLists.txt  filesystem.hpp
src/: CMakeLists.txt  main.cpp
tests/: Basic.cpp  CMakeLists.txt  common_test.cpp
